--- a/dev/scss/sections/_news.scss
+++ b/dev/scss/sections/_news.scss
@@ -21,7 +21,39 @@
     }
 }
 
+section{
+    div{
+        h1{
+            font-weight: 400;
+            font-size: rem-calc(20);
+
+            @include md{
+                font-weight: 400;
+                font-size: rem-calc(28);
+            }
+
+            @include lg{
+                font-weight: 400;
+                font-size: rem-calc(37);
+            }
+        }
+    }
+}
+
 #news{
+
+    h2{
+        font-weight: 800;
+        font-size: rem-calc(27);
+    }
+    p{
+        font-weight: 400;
+        font-size: rem-calc(16);
+    }
+    button{
+        font-weight: 700;
+        font-size: rem-calc(14);
+    }
 
     @include md{
         display: grid;
