--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -633,6 +633,35 @@ section section #hero-boxes #right-box {
   padding: 8px 0 8px 0;
 }
 
+section div h1 {
+  font-weight: 400;
+  font-size: 1.25rem;
+}
+@media (min-width: 768px) {
+  section div h1 {
+    font-weight: 400;
+    font-size: 1.75rem;
+  }
+}
+@media (min-width: 1024px) {
+  section div h1 {
+    font-weight: 400;
+    font-size: 2.3125rem;
+  }
+}
+
+#news h2 {
+  font-weight: 800;
+  font-size: 1.6875rem;
+}
+#news p {
+  font-weight: 400;
+  font-size: 1rem;
+}
+#news button {
+  font-weight: 700;
+  font-size: 0.875rem;
+}
 @media (min-width: 768px) {
   #news {
     display: grid;
