--- a/dev/scss/sections/_circlecards.scss
+++ b/dev/scss/sections/_circlecards.scss
@@ -11,6 +11,20 @@
                 display: grid;
                 grid-template-columns: 65% auto;
                 padding: 16px 16px 16px 16px;
+
+                h2{
+                    font-weight: 400;
+                    font-size: rem-calc(22);
+
+                    @include md{
+                        font-weight: 400;
+                    font-size: rem-calc(29);
+                    }
+                }
+                button{
+                    font-weight: 700;
+                    font-size: rem-calc(14);
+                }
             }
 
         }
