--- a/dev/scss/sections/_heroes.scss
+++ b/dev/scss/sections/_heroes.scss
@@ -60,6 +60,11 @@ section {
                     font-weight: 400;
                     font-size: rem-calc(16);
                 }
+                button{
+                    font-weight: 800;
+                font-size: rem-calc(18);
+                }
+                
             }
 
             @include md {
