--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -2,7 +2,7 @@
     Header
 ============= */
 header{
-    background-color: #05404F;
+   background-color: var(--navy);
     font-size: rem-calc(20);
 
 }
