--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -3,7 +3,7 @@
 ============= */
 
 footer {
-    background-color: #05404F;
+    background-color: var(--navy);
     padding: 16px 0 16px 0;
     >div {
 
