--- a/dev/scss/sections/_heroes.scss
+++ b/dev/scss/sections/_heroes.scss
@@ -6,7 +6,7 @@
         width: 100%;
         margin: 0;
         padding: 0;
-        font-weight: 0;
+        
     }
 
     ul {
@@ -60,6 +60,12 @@ section {
                     font-weight: 800;
                     font-size: rem-calc(18);
                     margin-left: auto;
+                    display: flex;
+                    align-items: center;
+                    
+                    img{
+                        margin-left: 8px;
+                    }
                 }
             }
 
@@ -72,8 +78,17 @@ section {
                 }
 
                 button {
+                    background-color: transparent;
+                    border: none;
                     font-weight: 800;
                     font-size: rem-calc(18);
+                    margin-left: auto;
+                    display: flex;
+                    align-items: center;
+
+                    img{
+                        margin-left: 8px;
+                    }
                 }
 
             }
