--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -532,10 +532,25 @@ footer > div #follow-us h3 {
 /* =============
     Heroes
 ============= */
+#hero {
+  width: 100vw;
+  height: 50vh;
+  background-image: url("../img/hero1.jpg");
+  background-size: cover;
+  background-position: center;
+}
+@media (min-width: 1024px) {
+  #hero {
+    height: 70vh;
+  }
+}
+
 .heroes img {
   width: 100%;
   margin: 0;
   padding: 0;
+  border: 0;
+  display: block;
 }
 .heroes ul {
   padding-left: 0%;
