--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -20,6 +20,7 @@
 @import "layout/_footer";
 
 // Sections Styles
+@import "sections/_search";
 @import "sections/_heroes";
 @import "sections/_news";
 @import "sections/_circlecards";
