--- a/dev/scss/components/_buttons.scss
+++ b/dev/scss/components/_buttons.scss
@@ -1,3 +1,10 @@
 /* =============
     Buttons
 ============= */
+
+.blue-button{
+    background-color: var(--ocean-blue);
+    color: black;
+    border: none;
+    padding: 8px 16px;
+}
