--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -416,6 +416,13 @@ p {
 /* =============
     Buttons
 ============= */
+.blue-button {
+  background-color: var(--ocean-blue);
+  color: black;
+  border: none;
+  padding: 8px 16px;
+}
+
 /* =============
     Forms
 ============= */
@@ -818,9 +825,12 @@ section div h1 {
     grid-template-columns: 16px auto 16px;
   }
 }
+#hero-cards div #upper-cards .circle-img {
+  margin-left: auto;
+}
 #hero-cards div #upper-cards .circle-card {
-  display: grid;
-  grid-template-columns: 65% auto;
+  display: flex;
+  align-items: center;
   padding: 16px 16px 16px 16px;
 }
 #hero-cards div #upper-cards .circle-card h2 {
@@ -836,6 +846,7 @@ section div h1 {
 #hero-cards div #upper-cards .circle-card button {
   font-weight: 700;
   font-size: 0.875rem;
+  margin-top: 16px;
 }
 
 #upper-cards {
