--- a/dev/scss/sections/_circlecards.scss
+++ b/dev/scss/sections/_circlecards.scss
@@ -7,10 +7,16 @@
     div {
         #upper-cards {
 
+            .circle-img{
+                margin-left: auto;
+            }
+
             .circle-card {
-                display: grid;
-                grid-template-columns: 65% auto;
+                display: flex;
+                align-items: center;
                 padding: 16px 16px 16px 16px;
+
+                
 
                 h2{
                     font-weight: 400;
@@ -24,6 +30,7 @@
                 button{
                     font-weight: 700;
                     font-size: rem-calc(14);
+                    margin-top: 16px;
                 }
             }
 
